--- a/input/webapp/index.html
+++ b/input/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>입력필드의 값 다뤄보</title>
+    <title>입력필드의 값 다뤄보기</title>
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
